# tilschuenemann.de

./: .gitignore  Makefile  build.py  pyproject.toml
.github/workflows/: deploy.yml
scripts/: scrambling.py
src/: index.html
src/_partials/: base.html  footer.html  header.html
src/multimedia/: multimedia-review-2025.html
src/pages/: now.html
src/projects/: building-my-own-media-server.html  overlooting-wiki.html  sacrificing-accessibility-for-not-getting-web-scraped.html
src/writing/: flat-hunting-in-germany-without-immoscout.html
