[project]
name = "projects-tilschuenemann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "ruff>=0.14.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.14.3",
]


[tool.ruff]
line-length = 160
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "C90", # mccabe
	"F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "S",   # flake8-bandit
]

[tool.uv.workspace]
members = ["eatthis"]
